setup fastapi_users

--- a/templates/inc/_news_buttons.html
+++ b/templates/inc/_news_buttons.html
@@ -1,8 +1,8 @@
-<form method="post" enctype="multipart/form-data" action="{% url 'like_route' news_item.pk %}">
+<form method="post" enctype="multipart/form-data" action="{{ url_for('news_like_route', news_id=news_item.id) }}">
 
-    {% csrf_token %}
+    {# {% csrf_token %} #}
 
-    {% if request.user.is_authenticated %}
+    {# {% if request.user.is_authenticated %} #}
 
         {% if news_item.pk in user_liked_posts %}
             <button type="submit" class="btn btn-danger btn-rounded" name="unlike"> 🖤 </button>
@@ -10,7 +10,7 @@
             <button type="submit" class="btn btn-outline-danger btn-rounded" name="like"> ♡ </button>
         {% endif %}
 
-    {% endif %}
+    {# {% endif %} #}
 
     <a href="{{ news_item.get_absolute_url }}" class="btn btn-primary"> Читать далее... </a>
 
