--- a/templates/news_list.html
+++ b/templates/news_list.html
@@ -30,7 +30,7 @@
 
         <div class="card-header">
             <a href="#" class="link-dark">
-                Категория: {{ news_item.category }} </a>
+                Категория: {{ news_item.category.title }} </a>
         </div>
 
         {% include 'inc/_news_list_news_item.html' %}
