--- a/templates/base.html
+++ b/templates/base.html
@@ -40,17 +40,15 @@
 
 <body>
 
-{# {% include 'inc/_navbar.html' %} #}
+{% include 'inc/_navbar.html' %}
 
 {% block custom_block %}
 {% endblock %}
 
 <div class="container mt-3">
 
-    {#
     {% block search %}
     {% endblock %}
-    #}
 
     <div class="row mt-3">
 
@@ -93,10 +91,8 @@
 
 </div>
 
-{#
 {% block footer %}
 {% endblock %}
-#}
 
 </body>
 
