--- a/templates/inc/_footer.html
+++ b/templates/inc/_footer.html
@@ -10,7 +10,7 @@
 
             <!-- Right -->
             <div>
-                <a target="_blank" href="https://github.com/nightblure/django-site-docker" class="me-4 text-reset">
+                <a target="_blank" href="https://github.com/nightblure/fastapi-news" class="me-4 text-reset">
                     <i class="fab fa-github"></i>
                 </a>
                 <a target="_blank" href="https://www.linkedin.com/in/ivan-belyaev13/" class="me-4 text-reset">
@@ -59,7 +59,7 @@
 <!--                    </div>-->
                     <!-- Grid column -->
 
-                    {% if request.user.is_authenticated and not request.user.is_subscriber %}
+                    {# {% if request.user.is_authenticated and not request.user.is_subscriber %}
                     <div class="col-md-3 col-lg-2 col-xl-4 mx-auto mb-4">
                         <form method="post" action="{% url 'subscribe_route' %}">
                             {% csrf_token %}
@@ -72,7 +72,7 @@
                             </div>
                         </form>
                     </div>
-                    {% endif %}
+                    {% endif %} #}
 
                     <!-- Grid column -->
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
@@ -80,7 +80,7 @@
                         <h6 class="text-uppercase fw-bold mb-4">Контактные данные</h6>
                         <p>
                             <i class="fab fa-github me-3"></i>
-                            <a target="_blank" class="secondary-link" href="https://github.com/nightblure/django-site-docker">GitHub Project</a>
+                            <a target="_blank" class="secondary-link" href="https://github.com/nightblure/fastapi-news">GitHub Project</a>
                         </p>
 
                         <p>
