--- a/templates/inc/_navbar.html
+++ b/templates/inc/_navbar.html
@@ -1,6 +1,6 @@
 <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="{% url 'home_route' %}"
+        <a href="{{ url_for('news_list_route') }}"
            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <img class="bi me-2" width="40" height="40"
                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9xVZqKLJharXvX3unv4ZgMnkQbXopf4glYg&usqp=CAU">
@@ -10,22 +10,22 @@
         <ul class="nav">
 
             <li class="nav-item">
-                <a href="{% url 'home_route' %}" class="nav-link link-secondary">Главная</a>
+                <a href="{{ url_for('news_list_route') }}" class="nav-link link-secondary">Главная</a>
             </li>
 
-            {% if request.user.is_authenticated %}
+            {# {% if request.user.is_authenticated %} #}
 
             <li class="nav-item">
-                <a class="nav-link link-secondary" href="{% url 'create_news_route' %}">Опубликовать новость</a>
+                <a class="nav-link link-secondary" href="{{ url_for('create_news_route') }}">Опубликовать новость</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link link-secondary" href="{% url 'create_category_route' %}">Создать категорию</a>
+                <a class="nav-link link-secondary" href="{{ url_for('create_category_route') }}">Создать категорию</a>
             </li>
 
-            {% endif %}
+            {# {% endif %} #}
 
-            {% if request.user.is_staff %}
+            {# {% if request.user.is_staff %} #}
             <li class="nav-item">
                 <a class="nav-link link-secondary" target="_blank" href="http://127.0.0.1:8000/admin/">Перейти в админку</a>
             </li>
@@ -40,42 +40,42 @@
                 <ul class="dropdown-menu">
 
                     <li>
-                        <a class="dropdown-item link-secondary" href="{% url 'token_route' %}">Token</a>
+                        <a class="dropdown-item link-secondary" href="{{ url_for('token_route') }}">Token</a>
                     </li>
 
                     <li>
-                        <a class="dropdown-item link-secondary" href="{% url 'jwt_token_route' %}">JWT</a>
+                        <a class="dropdown-item link-secondary" href="{{ url_for('jwt_token_route') }}">JWT</a>
                     </li>
 
                 </ul>
 
             </li>
 
-            {% endif %}
+            {# {% endif %} #}
 
         </ul>
 
-        {% if request.user.is_authenticated %}
+        {# {% if request.user.is_authenticated %} #}
 
         <div class="dropdown text-end">
             <a href="#" class="nav-link link-secondary dropdown-toggle" data-bs-toggle="dropdown"
                aria-expanded="false">
-                {% if request.user.avatar %}
-                <img src="{{ request.user.avatar.url }}" width="32" height="32" class="rounded-circle me-2">
+                {# {% if request.user.avatar %}
+                <img src="{{ url }}" width="32" height="32" class="rounded-circle me-2">
                 {% endif %}
-                <strong> {{ request.user }} </strong>
+                <strong> {{ request.user }} </strong> #}
             </a>
             <ul class="dropdown-menu text-small" style="">
-                <li><a class="dropdown-item" href="{% url 'edit_profile_route' request.user.username %}">Настройки учетной записи</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('edit_profile_route') }}">Настройки учетной записи</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="{% url 'logout_route' %}">Выйти</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('logout_route') }}">Выйти</a></li>
             </ul>
         </div>
 
-        {% else %}
-        <a class="nav-link link-secondary" href="{% url 'signup_route' %}">Зарегистрироваться </a>
-        <a class="nav-link link-secondary" href="{% url 'login_route' %}">Войти </a>
-        {% endif %}
+        {# {% else %} #}
+        <a class="nav-link link-secondary" href="{{ url_for('signup_route') }}">Зарегистрироваться </a>
+        <a class="nav-link link-secondary" href="{{ url_for('login_route') }}">Войти </a>
+        {# {% endif %} #}
 
     </header>
 </div>
