--- a/templates/inc/_news_list_news_item.html
+++ b/templates/inc/_news_list_news_item.html
@@ -1,9 +1,9 @@
 <div class="card-body">
     <div class="media d-flex">
 
-        {% if news_item.image %}
-        <img src="{{ news_item.image.url }}" alt="" height="300" width="300" class="me-3">
-        {% endif %}
+        {# {% if news_item.image %} #}
+        <img src="{{ url_for('images', path='/news/Screenshot_33.png') }}" alt="" height="300" width="300" class="me-3">
+        {# {% endif %} #}
 
         <div class="media-body">
 
@@ -13,7 +13,7 @@
 
             <p class="card-text"> {{ news_item.content }} </p>
 
-            {# {% include 'inc/_news_buttons.html' %} #}
+            {% include 'inc/_news_buttons.html' %}
 
         </div>
 
@@ -21,10 +21,9 @@
 
 </div>
 
-{#
+
 <div class="card-footer text-muted">
-    {{ news_item.author }}, {{ news_item.created_at|date:"d M, Y H:i" }}
+    {{ news_item.author.name }}, {{ news_item.created_at.strftime('%d %B %Y, %H:%M:%S') }} ({{ news_item.created_at.strftime('%A') }})
     <span style="float:right" class="badge rounded-pill text-bg-primary"> {{ news_item.views_count }} views </span>
-    <span style="float:right; margin-right: 10px" class="badge rounded-pill text-bg-danger"> {{ news_likes|dict_value:news_item.pk }} likes </span>
+    <span style="float:right; margin-right: 10px" class="badge rounded-pill text-bg-danger"> {{ news_likes_count[news_item.id] }} likes </span>
 </div>
-#}
