--- a/templates/inc/_search.html
+++ b/templates/inc/_search.html
@@ -1,4 +1,4 @@
-<form method="get" action="{% url 'home_route' %}">
+<form method="get" action="{{ url_for('news_list_route') }}">
 
     <div class="input-group">
         <input name="search" type="search" class="form-control rounded" placeholder="Введите поисковый запрос..." aria-label="Search"
