--- a/templates/inc/_navbar.html
+++ b/templates/inc/_navbar.html
@@ -13,7 +13,7 @@
                 <a href="{{ url_for('news_list_route') }}" class="nav-link link-secondary">Главная</a>
             </li>
 
-            {# {% if request.user.is_authenticated %} #}
+            {% if user %}
 
             <li class="nav-item">
                 <a class="nav-link link-secondary" href="{{ url_for('create_news_route') }}">Опубликовать новость</a>
@@ -23,7 +23,7 @@
                 <a class="nav-link link-secondary" href="{{ url_for('create_category_route') }}">Создать категорию</a>
             </li>
 
-            {# {% endif %} #}
+            {% endif %}
 
             {# {% if request.user.is_staff %} #}
             <li class="nav-item">
@@ -55,27 +55,38 @@
 
         </ul>
 
-        {# {% if request.user.is_authenticated %} #}
+        {% if user %}
 
         <div class="dropdown text-end">
             <a href="#" class="nav-link link-secondary dropdown-toggle" data-bs-toggle="dropdown"
                aria-expanded="false">
-                {# {% if request.user.avatar %}
+                {% if user.avatar %}
                 <img src="{{ url }}" width="32" height="32" class="rounded-circle me-2">
                 {% endif %}
-                <strong> {{ request.user }} </strong> #}
+                <strong> {{ user.email }} </strong>
             </a>
             <ul class="dropdown-menu text-small" style="">
                 <li><a class="dropdown-item" href="{{ url_for('edit_profile_route') }}">Настройки учетной записи</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="{{ url_for('logout_route') }}">Выйти</a></li>
+
+                <li>
+                    <form method="post" action="{{ url_for('logout_route') }}">
+                        <button type="submit">
+                            <a class="dropdown-item" href="{{ url_for('logout_route') }}">
+                                Выйти
+                            </a>
+
+                        </button>
+                    </form>
+                </li>
+
             </ul>
         </div>
 
-        {# {% else %} #}
+        {% else %}
         <a class="nav-link link-secondary" href="{{ url_for('signup_route') }}">Зарегистрироваться </a>
         <a class="nav-link link-secondary" href="{{ url_for('login_route') }}">Войти </a>
-        {# {% endif %} #}
+        {% endif %}
 
     </header>
 </div>
